# Sollaris

./: .gitignore  .gitmodules  CMakeLists.txt  test.py
lib_gcc/cmake/SFML/: SFMLSharedTargets-release.cmake
lib_gcc/cmake/capnp/: CapnProtoConfig.cmake.in  CapnProtoConfigVersion.cmake.in  CapnProtoMacros.cmake  CapnProtoTargets.cmake
sollaris/: CMakeLists.txt
sollaris/resources/shaders/: basic.fs  basic.vs
sollaris/src/: main.cpp
sollaris/src/UI/: UI.cpp  UI.h
sollaris/src/graphics/: Camera.cpp  Camera.h  GraphicsEngine.cpp  GraphicsEngine.h  Shader.cpp  Shader.h
sollaris/src/graphics/drawable/: Drawable.cpp  Drawable.h  Orbit.cpp  Orbit.h  Planet.cpp  Planet.h  Triangle.cpp  Triangle.h
sollaris/src/io/: IO.cpp  IO.h
sollaris/src/physics/: PhysicsEngine.cpp  PhysicsEngine.h
sollaris/src/util/: Log.h  common.cpp  common.h  serializable.capnp  serializable.capnp.c++  serializable.capnp.h  serializable.cpp
sollaris/tests/: CMakeLists.txt  DummyTest.cpp  IOTest.cpp  PhysicsTest.cpp  Vec3Test.cpp  my_tests[1]_include.cmake
src/: main.cpp
src/io/: IO.cpp
src/physics/: PhysicsEngine.h
src/util/: Log.h  events.h
